################ # <type>: <subject> # subject : 1줄 요약 알잘딱하게 # no dot(.) feat: 피드 등록 시 이미지 업로드 기능 구현 # <BLANK LINE> (제목과 본문의 분리를 위함) feat: 피드 등록 시 이미지 업로드 기능 구현 ################ # Body Message (optional) # 본문(구체적인 내용)을 아랫줄에 작성 # 여러 줄의 메시지를 작성할 땐 "-"로 구분
# <BLANK LINE>

################
# co-author
# Co-authored-by: {GITHUB_ID} <{E_MAIL}>
# Co-authored-by: pilyang <pilyang.dev@gmail.com>
# Co-authored-by: sh111-coder <ohk9134@naver.com>
# Co-authored-by: the9kim <the9rla@gmail.com>
Co-authored-by: SproutMJ <mjk54565@gmail.com>

# --- COMMIT END ---
# Allowed <type>
#   feat    : 새로운 기능
#   fix     : 버그 수정
#   refactor: 코드 리팩토링, 파일 이동, 컴포넌트 스타일 변경
#   style   : 코드 의미에 영향을 주지 않는 변경사항 (포매팅 수정, 들여쓰기 추가, ...)
#   docs    : 문서의 추가, 수정, 삭제
#   test    : 테스트 추가, 수정, 삭제 (비즈니스 로직에 변경 없음)
#   chore   : 기타 변경사항 (빌드 부분 혹은 패키지 의존성 설정 등)
# ------------------
# git convention url : https://gist.github.com/stephenparish/9941e89d80e2bc58a153
################