@@ -3,7 +3,6 @@ package team.teamby.teambyteam.common.fixtures;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import org.springframework.mock.web.MockMultipartFile;
 import team.teamby.teambyteam.feed.application.dto.FeedThreadWritingRequest;
@@ -47,10 +46,10 @@ public class FeedThreadFixtures {
                     UNDER_SIZE_PNG_FILE1.getName(), "image/png", new FileInputStream(UNDER_SIZE_PNG_FILE4));
 
             OVER_SIZE_PNG_MOCK_MULTIPART_FILE = new MockMultipartFile("over-size",
-                    UNDER_SIZE_PNG_FILE1.getName(), "image/png", new FileInputStream(UNDER_SIZE_PNG_FILE4));
+                    UNDER_SIZE_PNG_FILE1.getName(), "image/png", new FileInputStream(OVER_SIZE_PNG_FILE));
 
             UNDER_SIZE_WRONG_EXTENSION_MOCK_MULTIPART_FILE = new MockMultipartFile("under-size-wrong-extension",
-                    UNDER_SIZE_PNG_FILE1.getName(), "application/vnd.openxmlformats-officedocument.presentationml.presentation", new FileInputStream(UNDER_SIZE_PNG_FILE4));
+                    UNDER_SIZE_WRONG_EXTENSION_FILE.getName(), "application/vnd.openxmlformats-officedocument.presentationml.presentation", new FileInputStream(UNDER_SIZE_WRONG_EXTENSION_FILE));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -66,14 +65,20 @@ public class FeedThreadFixtures {
     /**
      * REQUEST
      */
-    public static final FeedThreadWritingRequest CONTENT_ONLY_REQUEST = new FeedThreadWritingRequest(HELLO_CONTENT,
-            Collections.emptyList());
+    public static final FeedThreadWritingRequest CONTENT_ONLY_REQUEST = new FeedThreadWritingRequest(HELLO_CONTENT, null);
     public static final FeedThreadWritingRequest IMAGE_ONLY_REQUEST = new FeedThreadWritingRequest("",
             List.of(UNDER_SIZE_PNG_MOCK_MULTIPART_FILE1, UNDER_SIZE_PNG_MOCK_MULTIPART_FILE2));
     public static final FeedThreadWritingRequest CONTENT_AND_IMAGE_REQUEST = new FeedThreadWritingRequest(HELLO_CONTENT,
             List.of(UNDER_SIZE_PNG_MOCK_MULTIPART_FILE1, UNDER_SIZE_PNG_MOCK_MULTIPART_FILE2));
-    public static final FeedThreadWritingRequest EMPTY_REQUEST = new FeedThreadWritingRequest("",
-            Collections.emptyList());
+
+    public static final FeedThreadWritingRequest OVER_IMAGE_COUNT_REQUEST = new FeedThreadWritingRequest(HELLO_CONTENT,
+            List.of(UNDER_SIZE_PNG_MOCK_MULTIPART_FILE1, UNDER_SIZE_PNG_MOCK_MULTIPART_FILE2, UNDER_SIZE_PNG_MOCK_MULTIPART_FILE3, UNDER_SIZE_PNG_MOCK_MULTIPART_FILE4,
+                    UNDER_SIZE_PNG_MOCK_MULTIPART_FILE1));
+
+    public static final FeedThreadWritingRequest OVER_IMAGE_SIZE_REQUEST = new FeedThreadWritingRequest(HELLO_CONTENT, List.of(OVER_SIZE_PNG_MOCK_MULTIPART_FILE));
+    public static final FeedThreadWritingRequest NOT_ALLOWED_IMAGE_EXTENSION_REQUEST = new FeedThreadWritingRequest(HELLO_CONTENT, List.of(UNDER_SIZE_WRONG_EXTENSION_MOCK_MULTIPART_FILE));
+
+    public static final FeedThreadWritingRequest EMPTY_REQUEST = new FeedThreadWritingRequest("", null);
     public static final FeedThreadWritingRequest HI_WRITING_REQUEST = new FeedThreadWritingRequest(HI_CONTENT,
             List.of(UNDER_SIZE_PNG_MOCK_MULTIPART_FILE1, UNDER_SIZE_PNG_MOCK_MULTIPART_FILE2));
 
